<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@color/white"

    tools:context="com.example.bikenmaharjan.priceapp.Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical" >


        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="@string/sign_up"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="30sp"-->
        <!--/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/background"/>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                >
                <EditText
                    android:id="@+id/txtemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                >
                <EditText
                    android:id="@+id/txtname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                >
                <EditText
                    android:id="@+id/txtpw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray"
                    android:password="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                >
                <EditText
                    android:id="@+id/txtcpw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm"
                    android:textColorHint="@color/white"
                    android:password="true"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnregister"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@color/buttonLogin"
                android:text="@string/register"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/pleaseWait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/progressBar"
                android:layout_alignLeft="@+id/progressBar"
                android:layout_alignRight="@+id/progressBar"
                android:text="@string/wait"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />


</RelativeLayout>