<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context="com.example.bikenmaharjan.priceapp.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            app:cardBackgroundColor="@color/colorPrimary">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:src="@drawable/p"
                android:textColor="@color/white"
                android:textSize="50sp"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="40dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="12sp" />



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="64dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="80dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    >
                    <EditText
                        android:id="@+id/txtemailinput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp"
                        android:hint="@string/email"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    >
                    <EditText
                        android:id="@+id/txtpwinput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp"
                        android:layout_marginTop="30dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnlogin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:background="@color/loginMagneta"
                    android:text="@string/login"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/txtregister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/not_register"
                    android:textColor="@color/red"
                    android:textSize="12sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>



    <ProgressBar
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        />


    <TextView
        android:id="@+id/pleaseWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_alignLeft="@+id/progressBar"
        android:layout_alignRight="@+id/progressBar"
        android:layout_marginTop="60dp"
        android:text="@string/wait"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />



</RelativeLayout>