<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/inputlayout"

    android:orientation="horizontal"
    android:gravity="center"
    android:background="@color/dgreen"
    tools:context="com.example.bikenmaharjan.priceapp.Input"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="150dp"

        android:scaleType="center"
        app:srcCompat="@drawable/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:layout_alignParentLeft="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:weightSum="1">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/barcode" />


        <EditText
            android:id="@+id/txtbarcode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/write_barcode"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtdate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_date"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtname"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <EditText
                android:id="@+id/txtprice"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/price"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:id="@+id/linearlayoutlast"


            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Spinner
                android:id="@+id/custom_spinner"
                android:layout_width="300dp"
                android:layout_height="60dp"

                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"

                app:layout_constraintLeft_toLeftOf="@+id/textView2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/choose"
                android:textSize="18sp" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="22dp"



        android:clickable="true"
        app:backgroundTint="@color/buttonLogin"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="21dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ocrscan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:clickable="true"
        app:backgroundTint="?android:attr/colorPressedHighlight"
        app:fabSize="normal"
        android:onClick="goocr"
        app:srcCompat="@drawable/scan"
        android:layout_alignBottom="@+id/scanner"
        android:visibility="gone"
        android:layout_toRightOf="@+id/scanner"
        android:layout_marginBottom="5dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/barcodescan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ocrscan"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/ocrscan"
        android:clickable="true"
        android:onClick="gobarcode"
        android:visibility="gone"
        app:backgroundTint="?android:attr/colorPressedHighlight"
        app:fabSize="normal"
        app:srcCompat="@drawable/barcode" />

        <Button
            android:id="@+id/btndone"

            android:layout_width="100dp"
            android:layout_height="47dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="8dp"

            android:layout_weight="0.04"
            android:background="@color/buttonLogin"
            android:text="@string/done"
            android:textColor="@color/white"
            android:layout_alignTop="@+id/scanner"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


</RelativeLayout>
